[package]
name = "quaero_engines"
version = "0.1.0"
edition = "2024"

[dependencies]
quaero_shared = { git = "https://github.com/quaero-search/quaero" }
query_parameters = "0.1.0"
# Local development.
# quaero_shared = { path = "../quaero/crates/quaero_shared" }
# query_parameters = { path = "../query_parameters" }

chrono = "0.4.42"
phf = { version = "0.13.1", features = ["macros"] }

# Async.
async-trait = "0.1.89"

# Http Clients.
anyhttp = { git = "https://github.com/quaero-search/anyhttp" }
http = "1.4.0"

# Html parsing.
html-escape = "0.2.13"
html_hybrid_parser = { git = "https://github.com/quaero-search/quaero" }
# Local development.
# html_hybrid_parser = { path = "../html_hybrid_parser" }
